# lighthouse

./: .rustfmt.toml  Cargo.toml  logger.yaml
.devcontainer/: devcontainer.json
src/: commands.rs  events.rs  lib.rs  main.rs
src/commands/: debug_command.rs
src/events/: interaction_create.rs  ready.rs
