[package]
name = "lighthouse"
description = "A discord moderation bot."
authors = ["abstraq <abstraq@outlook.com"]
version = "1.0.0"
license = "MIT"
edition = "2021"

[dependencies]
# Utilities
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Logging
log = "0.4"
log4rs = "1.1.1"

# Discord API
twilight-cache-inmemory = "0.13.0"
twilight-gateway = "0.13.0"
twilight-http = "0.13.0"
twilight-model = "0.13.2"
