[package]
name = "lighthouse"
description = "A discord moderation bot."
authors = ["abstraq <abstraq@outlook.com"]
version = "1.0.0"
license = "MIT"
edition = "2021"

[dependencies]
# Utilities
anyhow = "1.0"
chrono = "0.4.22"
futures = "0.3"
indoc = "1.0"
sysinfo = "0.26.2"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Logging
log = "0.4"
log4rs = "1.1.1"

# Discord API
twilight-gateway = "0.13.0"
twilight-http = "0.13.0"
twilight-model = "0.13.2"
twilight-util = { version = "0.13.1", features = ["full"] }
